# ADVPT_Project

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  compare_files.py  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
mnist-configs/: input-ci.config
pytorch/: main.py
src/: FullyConnected.hpp  Loss.hpp  NeuralNetwork.hpp  Optimizers.hpp  Relu.hpp  Softmax.hpp  data.hpp  label.hpp  tensor.hpp  test_data_images.cpp  test_data_labels.cpp  test_fully_connected.cpp  test_loss.cpp  test_relu.cpp  test_softmax.cpp  train_test_model.cpp
